alertmanager-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
spec:
  replicas: 1
  serviceName: alertmanager
  selector:
    matchLabels:
      run: alertmanager
  template:
    metadata:
      name: alertmanager
      labels:
        run: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - '--config.file=/etc/alertmanager/alertmanager.yml'
          - '--storage.path=/alertmanager'
          - '--web.external-url=$(EXTERNAL_URL)/alertmanager'
        ports:
        - name: alertmanager
          containerPort: 9093
        resources:
          # TEMPLATE: Set resource limits
          requests:
            cpu: .1
            memory: 50m
        volumeMounts:
        - name: config-volume
          mountPath: /etc/alertmanager
        - name: templates-volume
          mountPath: /etc/alertmanager-templates
        - name: alertmanager
          mountPath: /alertmanager
      volumes:
      - name: config-volume
        configMap:
          name: alertmanager
      - name: templates-volume
        configMap:
          name: alertmanager-templates
      - name: alertmanager
        emptyDir: {}
