blackbox-deployment.yaml
# Source: prometheus-blackbox-exporter/templates/deployment.yaml
# helm.sh/chart: prometheus-blackbox-exporter-4.11.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-blackbox-exporter
  labels:
    app.kubernetes.io/name: prometheus-blackbox-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-blackbox-exporter
      annotations:
        checksum/config: 320cc5537cef239c8facf79e7a3e06a2dd614a326243dc033f948e88510afca3
    spec:
      serviceAccountName: prometheus-blackbox-exporter
      restartPolicy: Always
      containers:
        - name: blackbox-exporter
          image: "prom/blackbox-exporter:v0.18.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          args:
            - "--config.file=/config/blackbox.yaml"
          resources:
            {}
          ports:
            - containerPort: 9115
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - mountPath: /config
              name: config
      hostNetwork: false
      volumes:
        - name: config
          configMap:
            name: prometheus-blackbox-exporter
