grafana-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  labels:
    run: grafana
spec:
  replicas: 1
  serviceName: grafana
  selector: 
    matchLabels:
      run: grafana
  template:
    metadata:
      labels:
        run: grafana
    spec:
      containers:
        - image: grafana/grafana
          name: grafana
          # env:
          resources:
            # TEMPLATE: Set resource limits
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: grafana-persistent-storage
            mountPath: /var
      securityContext:
        fsGroup: 1001
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
