prometheus-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-deployment
spec:
  replicas: 2
  podManagementPolicy: OrderedReady
  serviceName: prometheus-svc
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: quay.io/coreos/prometheus:latest
        args:
          - '-storage.local.retention=$(STORAGE_RETENTION)'
          - '-storage.local.memory-chunks=$(STORAGE_MEMORY_CHUNKS)'
          - '-config.file=/etc/prometheus/prometheus.yml'
          - '-alertmanager.url=http://alertmanager:9093/alertmanager'
          - '-web.external-url=$(EXTERNAL_URL)'
        ports:
        - name: web
          containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        - name: rules-volume
          mountPath: /etc/prometheus-rules
        - name: etcd-tls-client-certs
          mountPath: /etc/etcd/ssl
          readOnly: true
        - name: prometheus-data
          mountPath: /prometheus
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-configmap
      - name: rules-volume
        configMap:
          name: prometheus-rules
        #hostPath:
        #  path: /etc/ssl/etcd/
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: gp2
      resources:
        requests:
          storage: 2000Gi
