grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    run: grafana
  ports:
  - name: grafana
    protocol: TCP
    port: 3000
    targetPort: 3000
